test/wildcardForget.slq

def main(){
	x:=0:int[16];
	x[0]:=H(x[0]);
	y:=x+1;
	_:=y; // ok
	_:=x; /// error
}
